Revision history for Perl extension Mac::Spotlight::MDQuery.

0.05  Fri Jul 24 00:23:45 PDT 2009
        - Fixed Bus error with $item->get() for NULL values

0.04  Thu Jul 23 23:50:39 PDT 2009
        - Fixed another memory leak in $mditem->get

0.03  Thu Jul 23 23:34:39 PDT 2009
        - Added Mac::Spotlight::MDItem->new($path) to create MDItem directly
        - Fixed memory leaks with CFStringRef

0.02  Wed Jul 22 11:11:33 PDT 2009
        - Make this module compile on Mac OS X 10.5
        - Fixed kMDItemPath attribute bug
        - Module maint bit taken over by Tatsuhiko Miyagawa

0.01  Tue Aug  2 16:48:36 2005
	- original version; created by h2xs 1.23 with options
		-x -A -b5.8.0 -n Mac::Spotlight::MDQuery /Developer/SDKs/MacOSX10.4.0.sdk/System/Library/Frameworks/CoreServices.framework/Versions/A/Frameworks/Metadata.framework/Versions/A/Headers/MDQuery.h
