@@ -2,6 +2,8 @@ Revision history for Perl extension Mac::Spotlight::MDQuery.
 
 0.05  Fri Jul 24 00:23:45 PDT 2009
         - Fixed Bus error with $item->get() for NULL values
+        - Fixed segmentation faults introduced by fixing memleaks (Ugh)
+        - Added unit tests to both MDQuery and MDItem to prevent those memleaks and segfaults
 
 0.04  Thu Jul 23 23:50:39 PDT 2009
         - Fixed another memory leak in $mditem->get
